--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,6 +4,8 @@
       <title>my first webpage!</title>
     </head>
     <body>
+     <h1>my first webpage</h1>
+     <h2>written with alittle guidance from moringa school</h2>
      <p>Hello,world!</p>
      <p>welcome to my first webpage!</p>
     </body>
