--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>my first webpage!</title>
-    </head>
-    <body>
-     <h1>my first webpage</h1>
-     <h2>written with alittle guidance from moringa school</h2>
-     <p>Hello,world!</p>
-     <p>welcome to my first webpage!</p>
-    </body>
+  <head>
+    <title>my first webpage!</title>
+  </head>
+  <body>
+   <h1>my first webpage</h1>
+   <h2>written with alittle guidance from moringa school</h2>
+   <p>Hello,world!</p>
+   <p>welcome to my first webpage!</p>
+   <p>Here is alittle thing I am going to learn</p>
+   <ul>
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>javascript</li>
+     <li>And a lot more!</li>
+   </ul>
+  </body>
 </html>
