--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,9 +5,9 @@
   </head>
   <body>
    <h1>my first webpage</h1>
-   <h2>written with alittle guidance from moringa school</h2>
+   <h2>written with alittle guidance from <em>moringa school</em></h2>
    <p>Hello,world!</p>
-   <p>welcome to my first webpage!</p>
+   <p>welcome to my <strong>first webpage!</strong></p>
    <p>Here is alittle thing I am going to learn</p>
    <ul>
      <li>HTML</li>
@@ -15,5 +15,8 @@
      <li>javascript</li>
      <li>And a lot more!</li>
    </ul>
+   <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+   <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+   <img src="elephant.jpg" alt="A photo of an elephant">
   </body>
 </html>
