completion of project

--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -7,6 +7,16 @@
   <body>
     <h1>This are my favourite things</h1>
 
-    <p>This list contains my favourite things</p>
+    <p>This <em>list</em> contains my <strong>favourite things:</strong></p>
+    <ul>
+      <li>Milk</li>
+      <li>Apple</li>
+      <li>Movies</li>
+      <li>Sleeping</li>
+      <li>Coding</li>
+    </ul>
+    <img src="milk.jpg" alt="A glass of milk">
+    <img src="coding.jpeg" alt="Screen with code">
+    <img src="apple.jpeg" alt="An apple">
   </body>
 </html>
