change images path

--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -15,8 +15,8 @@
       <li>Sleeping</li>
       <li>Coding</li>
     </ul>
-    <img src="milk.jpg" alt="A glass of milk">
-    <img src="coding.jpeg" alt="Screen with code">
-    <img src="apple.jpeg" alt="An apple">
+    <img src="images/milk.jpg" alt="A glass of milk">
+    <img src="images/coding.jpeg" alt="Screen with code">
+    <img src="images/apple.jpeg" alt="An apple">
   </body>
 </html>
