change name of my-first-webpage.html to index.html

--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>my favourite things</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
     <h1>This are my favourite things</h1>
